# crop_classification_amini

./: .gitignore  Readme.md  Submission.csv  crop_classification.ipynb  pyproject.toml
extras/: Webinar_EO_series.ipynb  processing_Earth_Obsersation_Data_for_Machine_Learning.ipynb
